--- a/_includes/nav_list_main.html
+++ b/_includes/nav_list_main.html
@@ -1,5 +1,3 @@
-<!--전체 글 수를 세기 위한 연산. sum 변수에 전체 글 수 저장-->
-
 {% assign sum = site.posts | size %}
 
 <nav class="nav__list">
@@ -12,7 +10,7 @@
       </li>
       <li>
         <!--span 태그로 카테고리들을 크게 분류 ex) C/C++/C#-->
-        <span class="nav__sub-title">C/C++/C#</span>
+        <span class="nav__sub-title">JS</span>
             <!--ul 태그로 같은 카테고리들 모아둔 페이지들 나열-->
             <ul>
                 <!--Cpp 카테고리 글들을 모아둔 페이지인 /categories/cpp 주소의 글로 링크 연결-->
@@ -25,7 +23,7 @@
             </ul>
             <ul>
                 {% for category in site.categories %}
-                    {% if category[0] == "STL" %}
+                    {% if category[0] == "js" %}
                         <li><a href="/categories/stl" class="">C++ STL & 표준 ({{category[1].size}})</a></li>
                     {% endif %}
                 {% endfor %}
