--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -21,6 +21,23 @@ body {
   }
 }
 
+a {
+  text-decoration: none;                // 추가된 코드입니다.
+
+  &:focus {
+    @extend %tab-focus;
+  }
+
+  &:visited {
+    color: $link-color-visited;
+  }
+
+  &:hover {
+    color: $link-color-hover;
+    outline: 0;
+  }
+}
+
 h1,
 h2,
 h3,
