--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -148,7 +148,7 @@
             <i class="fab fa-fw fa-stack-overflow" aria-hidden="true"></i><span class="label">Stack Overflow</span>
           </a>
         </li>
-      {% endif %}ㅇ
+      {% endif %}
 
       {% if author.lastfm %}
         <li>
