--- a/_sass/minimal-mistakes/_utilities.scss
+++ b/_sass/minimal-mistakes/_utilities.scss
@@ -528,6 +528,7 @@ body:hover .visually-hidden button {
   p {
     margin-bottom: 0;
     font-size: $type-size-6;
+    line-height: 30px;
   }
 }
 
