--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,7 +5,8 @@
 <!-- end custom head snippets -->
 
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9068955780547069"
+        crossorigin="anonymous"></script>
 <script>
     (adsbygoogle = window.adsbygoogle || []).push({
         google_ad_client: "ca-pub-1234123412341234",
